// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tool parameters JSON Schema (wire shape) apply_patch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "patchText": {
      "description": "The full patch text that describes all changes to be made",
      "type": "string",
    },
  },
  "required": [
    "patchText",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) bash 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "command": {
      "description": "The command to execute",
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in milliseconds",
      "exclusiveMinimum": 0,
      "maximum": 9007199254740991,
      "minimum": -9007199254740991,
      "type": "integer",
    },
    "workdir": {
      "description": "The working directory to run the command in. Defaults to the current directory. Use this instead of 'cd' commands.",
      "type": "string",
    },
  },
  "required": [
    "command",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) edit 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file to modify",
      "type": "string",
    },
    "newString": {
      "description": "The text to replace it with (must be different from oldString)",
      "type": "string",
    },
    "oldString": {
      "description": "The text to replace",
      "type": "string",
    },
    "replaceAll": {
      "description": "Replace all occurrences of oldString (default false)",
      "type": "boolean",
    },
  },
  "required": [
    "filePath",
    "oldString",
    "newString",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) glob 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "path": {
      "description": "The directory to search in. If not specified, the current working directory will be used. IMPORTANT: Omit this field to use the default directory. DO NOT enter "undefined" or "null" - simply omit it for the default behavior. Must be a valid directory path if provided.",
      "type": "string",
    },
    "pattern": {
      "description": "The glob pattern to match files against",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) grep 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "include": {
      "description": "File pattern to include in the search (e.g. "*.js", "*.{ts,tsx}")",
      "type": "string",
    },
    "path": {
      "description": "The directory to search in. Defaults to the current working directory.",
      "type": "string",
    },
    "pattern": {
      "description": "The regex pattern to search for in file contents",
      "type": "string",
    },
  },
  "required": [
    "pattern",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) invalid 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "error": {
      "type": "string",
    },
    "tool": {
      "type": "string",
    },
  },
  "required": [
    "tool",
    "error",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) lsp 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "character": {
      "description": "The character offset (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "filePath": {
      "description": "The absolute or relative path to the file",
      "type": "string",
    },
    "line": {
      "description": "The line number (1-based, as shown in editors)",
      "maximum": 9007199254740991,
      "minimum": 1,
      "type": "integer",
    },
    "operation": {
      "description": "The LSP operation to perform",
      "enum": [
        "goToDefinition",
        "findReferences",
        "hover",
        "documentSymbol",
        "workspaceSymbol",
        "goToImplementation",
        "prepareCallHierarchy",
        "incomingCalls",
        "outgoingCalls",
      ],
      "type": "string",
    },
    "query": {
      "description": "Search query for workspaceSymbol. Empty string requests all symbols.",
      "type": "string",
    },
  },
  "required": [
    "operation",
    "filePath",
    "line",
    "character",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) plan 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) question 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "questions": {
      "description": "Questions to ask",
      "items": {
        "properties": {
          "header": {
            "description": "Very short label (max 30 chars)",
            "type": "string",
          },
          "multiple": {
            "description": "Allow selecting multiple choices",
            "type": "boolean",
          },
          "options": {
            "description": "Available choices",
            "items": {
              "properties": {
                "description": {
                  "description": "Explanation of choice",
                  "type": "string",
                },
                "label": {
                  "description": "Display text (1-5 words, concise)",
                  "type": "string",
                },
              },
              "required": [
                "label",
                "description",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "question": {
            "description": "Complete question",
            "type": "string",
          },
        },
        "required": [
          "question",
          "header",
          "options",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "questions",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) read 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "filePath": {
      "description": "The absolute path to the file or directory to read",
      "type": "string",
    },
    "limit": {
      "description": "The maximum number of lines to read (defaults to 2000)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "offset": {
      "description": "The line number to start reading from (1-indexed)",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
  },
  "required": [
    "filePath",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) skill 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "name": {
      "description": "The name of the skill from available_skills",
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) task 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "background": {
      "description": "Run the agent in the background. You will be notified when it completes. DO NOT sleep, poll, or proactively check on its progress",
      "type": "boolean",
    },
    "command": {
      "description": "The command that triggered this task",
      "type": "string",
    },
    "description": {
      "description": "A short (3-5 words) description of the task",
      "type": "string",
    },
    "prompt": {
      "description": "The task for the agent to perform",
      "type": "string",
    },
    "subagent_type": {
      "description": "The type of specialized agent to use for this task",
      "type": "string",
    },
    "task_id": {
      "description": "This should only be set if you mean to resume a previous task (you can pass a prior task_id and the task will continue the same subagent session as before instead of creating a fresh one)",
      "type": "string",
    },
  },
  "required": [
    "description",
    "prompt",
    "subagent_type",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) todo 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "todos": {
      "description": "The updated todo list",
      "items": {
        "properties": {
          "content": {
            "description": "Brief description of the task",
            "type": "string",
          },
          "priority": {
            "description": "Priority level of the task: high, medium, low",
            "type": "string",
          },
          "status": {
            "description": "Current status of the task: pending, in_progress, completed, cancelled",
            "type": "string",
          },
        },
        "required": [
          "content",
          "status",
          "priority",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "todos",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) webfetch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "format": {
      "default": "markdown",
      "description": "The format to return the content in (text, markdown, or html). Defaults to markdown.",
      "enum": [
        "text",
        "markdown",
        "html",
      ],
      "type": "string",
    },
    "timeout": {
      "description": "Optional timeout in seconds (max 120)",
      "type": "number",
    },
    "url": {
      "description": "The URL to fetch content from",
      "type": "string",
    },
  },
  "required": [
    "url",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) websearch 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "contextMaxCharacters": {
      "description": "Maximum characters for context string optimized for LLMs (default: 10000)",
      "type": "number",
    },
    "livecrawl": {
      "description": "Live crawl mode - 'fallback': use live crawling as backup if cached content unavailable, 'preferred': prioritize live crawling (default: 'fallback')",
      "enum": [
        "fallback",
        "preferred",
      ],
      "type": "string",
    },
    "numResults": {
      "description": "Number of search results to return (default: 8)",
      "type": "number",
    },
    "query": {
      "description": "Websearch query",
      "type": "string",
    },
    "type": {
      "description": "Search type - 'auto': balanced search (default), 'fast': quick results, 'deep': comprehensive search",
      "enum": [
        "auto",
        "fast",
        "deep",
      ],
      "type": "string",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) workflow 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "params": {
      "anyOf": [
        {
          "properties": {
            "action": {
              "description": "Create a workflow",
              "enum": [
                "start",
              ],
              "type": "string",
            },
            "spec_path": {
              "description": "(start/extend/control replan/read/validate) An exact saved workflow name returned by workflow(action="list"), or a path to a YAML workflow spec. Graph content belongs in that file; relative paths resolve from the session directory",
              "type": "string",
            },
          },
          "required": [
            "action",
            "spec_path",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Add nodes or blocks to a live workflow",
              "enum": [
                "extend",
              ],
              "type": "string",
            },
            "spec_path": {
              "description": "(start/extend/control replan/read/validate) An exact saved workflow name returned by workflow(action="list"), or a path to a YAML workflow spec. Graph content belongs in that file; relative paths resolve from the session directory",
              "type": "string",
            },
            "workflow_id": {
              "description": "Target workflow ID",
              "pattern": "^dag.*$",
              "type": "string",
            },
          },
          "required": [
            "action",
            "workflow_id",
            "spec_path",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Control a live workflow",
              "enum": [
                "control",
              ],
              "type": "string",
            },
            "operation": {
              "description": "Apply a node fragment (add/cancel/restart/replace)",
              "enum": [
                "replan",
              ],
              "type": "string",
            },
            "spec_path": {
              "description": "(start/extend/control replan/read/validate) An exact saved workflow name returned by workflow(action="list"), or a path to a YAML workflow spec. Graph content belongs in that file; relative paths resolve from the session directory",
              "type": "string",
            },
            "workflow_id": {
              "description": "Target workflow ID",
              "pattern": "^dag.*$",
              "type": "string",
            },
          },
          "required": [
            "action",
            "operation",
            "workflow_id",
            "spec_path",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Control a live workflow",
              "enum": [
                "control",
              ],
              "type": "string",
            },
            "operation": {
              "description": "pause/resume/cancel/step/complete",
              "enum": [
                "pause",
                "resume",
                "cancel",
                "step",
                "complete",
              ],
              "type": "string",
            },
            "workflow_id": {
              "description": "Target workflow ID",
              "pattern": "^dag.*$",
              "type": "string",
            },
          },
          "required": [
            "action",
            "operation",
            "workflow_id",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Inspect durable workflow and node state",
              "enum": [
                "status",
              ],
              "type": "string",
            },
            "workflow_id": {
              "description": "Target workflow ID",
              "pattern": "^dag.*$",
              "type": "string",
            },
          },
          "required": [
            "action",
            "workflow_id",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Read one durable node output in bounded pages",
              "enum": [
                "result",
              ],
              "type": "string",
            },
            "cursor": {
              "description": "Opaque continuation cursor returned by the previous page",
              "type": "string",
            },
            "limit": {
              "description": "Maximum page characters; defaults to 8000, max 12000",
              "maximum": 12000,
              "minimum": 1,
              "type": "integer",
            },
            "node_id": {
              "description": "Target durable node ID",
              "type": "string",
            },
            "workflow_id": {
              "description": "Target workflow ID",
              "pattern": "^dag.*$",
              "type": "string",
            },
          },
          "required": [
            "action",
            "workflow_id",
            "node_id",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Show saved workflow names, objectives, sizes, scopes, and validation status",
              "enum": [
                "list",
              ],
              "type": "string",
            },
          },
          "required": [
            "action",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Inspect one saved spec before retargeting it",
              "enum": [
                "read",
              ],
              "type": "string",
            },
            "spec_path": {
              "description": "(start/extend/control replan/read/validate) An exact saved workflow name returned by workflow(action="list"), or a path to a YAML workflow spec. Graph content belongs in that file; relative paths resolve from the session directory",
              "type": "string",
            },
          },
          "required": [
            "action",
            "spec_path",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Load detailed guidance only when needed",
              "enum": [
                "guide",
              ],
              "type": "string",
            },
            "topic": {
              "description": "blocks: composable block schema; interface: low-level workflow API; policy: gates/admission/recovery; patterns: domain playbooks. Omit for the compact index",
              "enum": [
                "blocks",
                "interface",
                "policy",
                "patterns",
              ],
              "type": "string",
            },
          },
          "required": [
            "action",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Render a structured graph into a validated YAML spec file and return its spec_path — no workflow is created. Preferred over hand-writing YAML: field names are schema-checked here, eliminating serialization drift",
              "enum": [
                "draft",
              ],
              "type": "string",
            },
            "config": {
              "anyOf": [
                {
                  "properties": {
                    "blocks": {
                      "description": "Composable blocks compiled into nodes by the runtime",
                      "items": {
                        "properties": {
                          "depends_on": {
                            "description": "Block IDs this block waits for. Defaults to []",
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                          "id": {
                            "description": "Unique block identifier; dependencies target block IDs",
                            "type": "string",
                          },
                          "instruction": {
                            "description": "Task-specific instruction added to the block's built-in execution contract",
                            "type": "string",
                          },
                          "kind": {
                            "description": "Composable workflow block; debug and review expand into evidence-gathering subgraphs",
                            "enum": [
                              "explore",
                              "plan",
                              "prototype",
                              "debug",
                              "coding",
                              "verify",
                              "review",
                              "synthesize",
                            ],
                            "type": "string",
                          },
                          "report_to_parent": {
                            "description": "Override wake behavior. Review decisions and synthesis report by default",
                            "type": "boolean",
                          },
                          "required": {
                            "description": "Whether failure is terminal. Decision and verification blocks default to true; volume blocks to false",
                            "type": "boolean",
                          },
                          "worker_type": {
                            "description": "Optional configured agent override; defaults from the block kind",
                            "type": "string",
                          },
                        },
                        "required": [
                          "id",
                          "kind",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "max_concurrency": {
                      "description": "Max parallel nodes. Default: 5",
                      "type": "number",
                    },
                    "max_node_replan_attempts": {
                      "description": "Max replan restarts per node ID. Default: 5",
                      "type": "number",
                    },
                    "max_total_nodes": {
                      "description": "Cumulative node cap across the workflow lifetime. Default: 100",
                      "type": "number",
                    },
                    "name": {
                      "description": "Workflow name",
                      "type": "string",
                    },
                    "node_defaults": {
                      "description": "Defaults inherited by nodes that omit required, worker_config, or report_to_parent",
                      "properties": {
                        "report_to_parent": {
                          "type": "boolean",
                        },
                        "required": {
                          "type": "boolean",
                        },
                        "worker_config": {
                          "properties": {
                            "timeout_ms": {
                              "type": "number",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "objective": {
                      "description": "Injected into every generated child prompt; required for blocks",
                      "type": "string",
                    },
                  },
                  "required": [
                    "name",
                    "objective",
                    "blocks",
                  ],
                  "type": "object",
                },
                {
                  "properties": {
                    "max_concurrency": {
                      "description": "Max parallel nodes. Default: 5",
                      "type": "number",
                    },
                    "max_node_replan_attempts": {
                      "description": "Max replan restarts per node ID. Default: 5",
                      "type": "number",
                    },
                    "max_total_nodes": {
                      "description": "Cumulative node cap across the workflow lifetime. Default: 100",
                      "type": "number",
                    },
                    "name": {
                      "description": "Workflow name",
                      "type": "string",
                    },
                    "node_defaults": {
                      "description": "Defaults inherited by nodes that omit required, worker_config, or report_to_parent",
                      "properties": {
                        "report_to_parent": {
                          "type": "boolean",
                        },
                        "required": {
                          "type": "boolean",
                        },
                        "worker_config": {
                          "properties": {
                            "timeout_ms": {
                              "type": "number",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "nodes": {
                      "description": "Low-level node declarations",
                      "items": {
                        "properties": {
                          "cancel": {
                            "description": "(replan only) Cancel this node",
                            "type": "boolean",
                          },
                          "condition": {
                            "description": "Expression evaluated before spawn; node is skipped if false",
                            "type": "string",
                          },
                          "depends_on": {
                            "description": "Node IDs this node waits for ([] for root)",
                            "items": {
                              "type": "string",
                            },
                            "type": "array",
                          },
                          "id": {
                            "description": "Unique node identifier, used in depends_on",
                            "type": "string",
                          },
                          "input_mapping": {
                            "additionalProperties": {
                              "type": "string",
                            },
                            "description": "Optional variable-to-source map, e.g. { resultA: "node-a", count: "node-b.output.count" }. Omit to expose each direct dependency under its node ID",
                            "type": "object",
                          },
                          "name": {
                            "description": "Human-readable node name",
                            "type": "string",
                          },
                          "output_schema": {
                            "description": "JSON Schema; child agent must call submit_result to submit structured output",
                            "type": "object",
                          },
                          "prompt_template": {
                            "anyOf": [
                              {
                                "properties": {
                                  "inline": {
                                    "description": "Inline prompt text; bind {{placeholders}} via input or input_mapping",
                                    "type": "string",
                                  },
                                  "input": {
                                    "type": "object",
                                  },
                                },
                                "required": [
                                  "inline",
                                ],
                                "type": "object",
                              },
                              {
                                "properties": {
                                  "id": {
                                    "description": "Prompt asset id resolved from .opencode/dag-prompts (project, then global)",
                                    "type": "string",
                                  },
                                  "input": {
                                    "type": "object",
                                  },
                                },
                                "required": [
                                  "id",
                                ],
                                "type": "object",
                              },
                            ],
                            "description": "Template: exactly one of { id: "..." } or { inline: "...", input: {...} }. Direct dependency outputs are available as {{node-id}} by default",
                          },
                          "report_to_parent": {
                            "description": "If true, the parent agent is woken when this node completes or fails. Inherits config.node_defaults.report_to_parent",
                            "type": "boolean",
                          },
                          "required": {
                            "description": "If true and this node fails, the workflow terminalizes as failed. Inherits config.node_defaults.required",
                            "type": "boolean",
                          },
                          "restart": {
                            "description": "(replan only) Re-spawn this running node with new prompt. Running nodes only — terminal (completed/failed/skipped) nodes are immutable; to retry a failed node, add a replacement node under a new id",
                            "type": "boolean",
                          },
                          "review": {
                            "description": "(deep review workers) design reviews pre-implementation artifacts; diff reviews require implementation_node_id and verification_node_id",
                            "properties": {
                              "implementation_node_id": {
                                "type": "string",
                              },
                              "phase": {
                                "enum": [
                                  "design",
                                  "diff",
                                ],
                                "type": "string",
                              },
                              "verification_node_id": {
                                "type": "string",
                              },
                            },
                            "required": [
                              "phase",
                            ],
                            "type": "object",
                          },
                          "worker_config": {
                            "description": "{ timeout_ms } — bounds node execution. Inherits config.node_defaults.worker_config",
                            "properties": {
                              "timeout_ms": {
                                "type": "number",
                              },
                            },
                            "type": "object",
                          },
                          "worker_type": {
                            "description": "Agent type (explore, build, general, plan, or custom)",
                            "type": "string",
                          },
                        },
                        "required": [
                          "id",
                          "name",
                          "worker_type",
                          "depends_on",
                          "prompt_template",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                  },
                  "required": [
                    "name",
                    "nodes",
                  ],
                  "type": "object",
                },
              ],
              "description": "Exactly one graph shape: { name, objective, blocks: [{ id, kind, depends_on?, instruction?, worker_type?, required?, report_to_parent? }], node_defaults?, max_concurrency?, max_node_replan_attempts?, max_total_nodes? } or the low-level { name, nodes: [...] } form. Fields are exhaustive — no others exist",
            },
            "title": {
              "description": "Optional workflow title",
              "type": "string",
            },
          },
          "required": [
            "action",
            "config",
          ],
          "type": "object",
        },
        {
          "properties": {
            "action": {
              "description": "Pre-flight a custom spec without creating a workflow; returns diagnostics, never a workflow ID",
              "enum": [
                "validate",
              ],
              "type": "string",
            },
            "profile": {
              "description": "portable: distributable-template checks; environment: additionally resolves prompts, workers, and models in this project. Defaults: builtin specs portable, project/global/path specs environment",
              "enum": [
                "portable",
                "environment",
              ],
              "type": "string",
            },
            "spec_path": {
              "description": "(start/extend/control replan/read/validate) An exact saved workflow name returned by workflow(action="list"), or a path to a YAML workflow spec. Graph content belongs in that file; relative paths resolve from the session directory",
              "type": "string",
            },
          },
          "required": [
            "action",
            "spec_path",
          ],
          "type": "object",
        },
      ],
      "description": "The workflow action and its action-owned fields",
    },
  },
  "required": [
    "params",
  ],
  "type": "object",
}
`;

exports[`tool parameters JSON Schema (wire shape) write 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "content": {
      "description": "The content to write to the file",
      "type": "string",
    },
    "filePath": {
      "description": "The absolute path to the file to write (must be absolute, not relative)",
      "type": "string",
    },
  },
  "required": [
    "content",
    "filePath",
  ],
  "type": "object",
}
`;
